# dropping-site

./: .gitignore  README.md  flake.nix  fly.toml  pyproject.toml
src/: app.py
src/puzzles/: .~lock.braille_signs.odp#  Tournament  braille_signs.odp
src/templates/: 1-1.html  404.html  Done.html  Final.html  Photos.html  base.html  braille.html  smallproblems.html  start.html  tournament.html
